# GradTDDFT

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: README.md
docs/: architecture.md
examples/: compare_benzene_b3lyp_vs_neural.py  compare_h2_fci_vs_neural_spectrum.py  compare_pyscf_vs_jax_tddft_no_neural.py  compare_water_b3lyp_vs_neural.py  compare_water_semilocal_channels.py  evaluate_h2_three_loss_checkpoints.py  h2_dissociation_geomopt.py  h2_fci_ground_curve.py  h2_fci_self_consistent_train.py  h2_fci_train_and_excited_compare.py  h2_long_range_excited_finetune.py  h2_three_loss_dissociation_compare.py  qh9_fractional_charge_scan.py  qh9_short_benchmark.py  replot_h2_ground_excited_with_zoom.py  run_oh_open_shell_tda.py  run_workflow_experiment.py  water_overfit_with_orbitals.py
scripts/: benchmark_jax_xc_pyscf_water.py  diagnose_jax_xc_hybrid_mixes.py  install_td_graddft_env.sh  organize_plot_data.py  plot_jax_xc_water_benchmark.py  run_h2_631gstar_gpu4pyscf_two_stage.sh  train_ccsdt_gpu4pyscf_smoke.py  train_ccsdt_ground_state.py
tests/: conftest.py  pyscf_reference.py  qh9_single_overfit_quick.py  test_acene_benchmark_tool.py  test_atomic_species_extrapolation.py  test_basis_pyscf_spec.py  test_ccsdt_gpu4pyscf_smoke_script.py  test_closed_shell_s1_training_cli.py  test_cuda_direct_jk_ffi.py  test_cuda_direct_jk_prebuild.py  test_cuda_one_electron_ffi.py  test_data_import_boundaries.py  test_data_process_public_api.py  test_data_process_tools.py  test_data_reference.py  test_density_fitting_rks.py  test_device.py  test_differentiable_geometry_reference.py  test_differentiable_scf.py  test_dm21_like.py  test_examples_public_api_usage.py  test_excited_state_trainer.py  test_features_parallel.py  test_fractional_charge_tools.py  test_generate_atomic_species_eomee_s1_csv.py  test_generate_qh9_eomee_s1_csv.py  test_geomopt_freq_rhf_tddft.py  test_geomopt_freq_tools.py  test_geomopt_rks.py  test_gpu4pyscf_forward.py  test_gpu4pyscf_implicit_backward.py  test_gpu4pyscf_integrals.py  test_gpu_s_shell_direct_jk.py  test_graddft_atoms_ground_train_cli.py  test_graddft_ground_atoms.py  test_grid_ao_jax.py  test_h2_s1_tool_compat.py  test_h2plus_s1_tool_compat.py  test_integrals_jax.py  test_jax_libxc.py  (+68 more)
tools/: ani1ccx_ground_state_efficiency_scan.py  (+95 more)
(+507 files in other folders)
